Added texting to informed widget

--- a/config/typus/20110530211325_application_roles.yml
+++ b/config/typus/20110530211325_application_roles.yml
@@ -5,6 +5,6 @@
 admin:
   Carrier: create, read, update, delete
   Company: create, read, update, delete
-  Follower: create, read, update, delete
+  Follower: read, delete
   Sig: create, read, update, delete
   User: create, read, update, delete
