--- a/config/typus/20110530211325_application.yml
+++ b/config/typus/20110530211325_application.yml
@@ -14,8 +14,8 @@ Carrier:
 
 Company:
   fields:
-    default: user_id, name, db_name, db_pass, logo_file_name, user
-    form: user_id, name, db_name, db_pass, logo_file_name, user
+    default: user, name, db_name, db_pass, logo_file_name
+    form: user, name, db_name, db_pass, logo_file_name
   order_by: 
   relationships: followers, user
   filters: created_at
@@ -24,8 +24,8 @@ Company:
 
 Follower:
   fields:
-    default: company_id, carrier_id, email, phone, opt_out_key, company, carrier
-    form: company_id, carrier_id, email, phone, opt_out_key, company, carrier
+    default: company, carrier, email, phone, opt_out_key, short_url
+    form: email, phone, company, carrier
   order_by: 
   relationships: carrier, company
   filters: created_at
