Edited config/widget_maps.yml via GitHub

--- a/config/widget_maps.yml
+++ b/config/widget_maps.yml
@@ -911,7 +911,7 @@ docs:
       - full-website
     tabs:
       - call-us
-      - products
+      - leave-a-message
       - keep-me-informed
   -
     types:
