--- a/config/widget_meta.yml
+++ b/config/widget_meta.yml
@@ -66,7 +66,7 @@ custom_page::custom-page:
   canEditIcon: true
 coupon::coupon:
   canRename: true
-  canEditIcon: false
+  canEditIcon: true
 page_tree::category:
   canRename: true
   canEditIcon: true
