--- a/config/widget_icons.yml
+++ b/config/widget_icons.yml
@@ -15,6 +15,7 @@
 - { name: custom-page, pname: Page }
 - { name: donate, pname: Donate }
 - { name: volunteer, pname: Volunteer }
+- { name: weather-1, pname: Weather }
 - { name: event-calendar, pname: Calendar }
 - { name: event-calendar-2, pname: Calendar }
 - { name: event-calendar-3, pname: Calendar }
