Fixed more widget icon typos

--- a/config/widget_icons.yml
+++ b/config/widget_icons.yml
@@ -111,7 +111,7 @@
 - { name: 115.translation-services, pname: 115.translation-services }
 - { name: 116.video-rental-1, pname: 116.video-rental-1 }
 - { name: 116.video-rental-2, pname: 116.video-rental-2 }
-- { name: 117.videographer , pname: 117.videographer  }
+- { name: 117.videographer, pname: 117.videographer }
 - { name: 118.website-design-1, pname: 118.website-design-1 }
 - { name: 119.wedding-cakes, pname: 119.wedding-cakes }
 - { name: 12.environmentally-friendly-green, pname: 12.environmentally-friendly-green }
@@ -177,10 +177,10 @@
 - { name: 161.scientology, pname: 161.scientology }
 - { name: 162.scripture, pname: 162.scripture }
 - { name: 163.wedding-services, pname: 163.wedding-services }
-- { name: 164.311-info , pname: 164.311-info  }
-- { name: 165.911-emergecy , pname: 165.911-emergecy  }
+- { name: 164.311-info, pname: 164.311-info }
+- { name: 165.911-emergecy, pname: 165.911-emergecy }
 - { name: 166.airport, pname: 166.airport }
-- { name: 167.code compliance , pname: 167.code compliance  }
+- { name: 167.code-compliance, pname: 167.code compliance }
 - { name: 168.convention-center-1, pname: 168.convention-center-1 }
 - { name: 168.convention-center-2, pname: 168.convention-center-2 }
 - { name: 169.courts, pname: 169.courts }
@@ -205,7 +205,7 @@
 - { name: 184.small-business, pname: 184.small-business }
 - { name: 185.tourism, pname: 185.tourism }
 - { name: 186.utilities, pname: 186.utilities }
-- { name: 187.visitor-guide , pname: 187.visitor-guide  }
+- { name: 187.visitor-guide, pname: 187.visitor-guide }
 - { name: 188.electric-utility, pname: 188.electric-utility }
 - { name: 188.water-utility-1, pname: 188.water-utility-1 }
 - { name: 188.water-utility-2, pname: 188.water-utility-2 }
@@ -242,11 +242,11 @@
 - { name: 216.room-service, pname: 216.room-service }
 - { name: 217.construction, pname: 217.construction }
 - { name: 218.landscaping, pname: 218.landscaping }
-- { name: 219.leed-green-building , pname: 219.leed-green-building  }
+- { name: 219.leed-green-building, pname: 219.leed-green-building }
 - { name: 22.make-a-payment-1, pname: 22.make-a-payment-1 }
 - { name: 22.make-a-payment-2, pname: 22.make-a-payment-2 }
 - { name: 220.remodeling, pname: 220.remodeling }
-- { name: 221.dental-insurance , pname: 221.dental-insurance  }
+- { name: 221.dental-insurance, pname: 221.dental-insurance }
 - { name: 222.home-insurance-1, pname: 222.home-insurance-1 }
 - { name: 222.home-security, pname: 222.home-security }
 - { name: 223.medical-insurance-1, pname: 223.medical-insurance-1 }
@@ -260,7 +260,7 @@
 - { name: 229.legal-services, pname: 229.legal-services }
 - { name: 23.membership-1, pname: 23.membership-1 }
 - { name: 23.membership-2, pname: 23.membership-2 }
-- { name: 230.divorce , pname: 230.divorce  }
+- { name: 230.divorce, pname: 230.divorce }
 - { name: 231.prenuptual, pname: 231.prenuptual }
 - { name: 232.terms-conditions-1, pname: 232.terms-conditions-1 }
 - { name: 232.terms-conditions-2, pname: 232.terms-conditions-2 }
@@ -274,15 +274,15 @@
 - { name: 262.fish, pname: 262.fish }
 - { name: 27.organizational-chart, pname: 27.organizational-chart }
 - { name: 273.child male, pname: 273.child male }
-- { name: 274.child female , pname: 274.child female  }
-- { name: 275.children , pname: 275.children  }
-- { name: 276.teen male, pname: 276.teen male }
-- { name: 277.teen female, pname: 277.teen female }
-- { name: 278.teenagers , pname: 278.teenagers  }
-- { name: 279.senior citizens , pname: 279.senior citizens  }
+- { name: 274.child female, pname: 274.child female }
+- { name: 275.children, pname: 275.children }
+- { name: 276.teen-male, pname: 276.teen male }
+- { name: 277.teen-female, pname: 277.teen female }
+- { name: 278.teenagers, pname: 278.teenagers  }
+- { name: 279.senior-citizens, pname: 279.senior citizens  }
 - { name: 28.park, pname: 28.park }
 - { name: 280.veterans, pname: 280.veterans }
-- { name: 281.family , pname: 281.family  }
+- { name: 281.family, pname: 281.family }
 - { name: 282.lgbt, pname: 282.lgbt }
 - { name: 289.burger-shop, pname: 289.burger-shop }
 - { name: 29.party-supplies-1, pname: 29.party-supplies-1 }
@@ -340,7 +340,7 @@
 - { name: 50.bank-statements-1, pname: 50.bank-statements-1 }
 - { name: 51.business-accounts, pname: 51.business-accounts }
 - { name: 52.money-orders, pname: 52.money-orders }
-- { name: 53.check-cashing , pname: 53.check-cashing  }
+- { name: 53.check-cashing, pname: 53.check-cashing }
 - { name: 54.checking-account, pname: 54.checking-account }
 - { name: 55.services, pname: 55.services }
 - { name: 56.international-banking, pname: 56.international-banking }
@@ -353,8 +353,8 @@
 - { name: 60.savings-account-2, pname: 60.savings-account-2 }
 - { name: 61.tax-preparation-1, pname: 61.tax-preparation-1 }
 - { name: 61.tax-preparation, pname: 61.tax-preparation }
-- { name: 62.wire-transfers , pname: 62.wire-transfers  }
-- { name: 63.dress-code , pname: 63.dress-code  }
+- { name: 62.wire-transfers, pname: 62.wire-transfers }
+- { name: 63.dress-code, pname: 63.dress-code }
 - { name: 64.drinks-bar-1, pname: 64.drinks-bar-1 }
 - { name: 64.drinks-bar-2, pname: 64.drinks-bar-2 }
 - { name: 65.happy-hour, pname: 65.happy-hour }
@@ -393,7 +393,7 @@
 - { name: 83.stylist-2, pname: 83.stylist-2 }
 - { name: 84.bridal-services, pname: 84.bridal-services }
 - { name: 85.carpet-store-1, pname: 85.carpet-store-1 }
-- { name: 86.daycare-child-care , pname: 86.daycare-child-care  }
+- { name: 86.daycare-child-care, pname: 86.daycare-child-care }
 - { name: 87.dj, pname: 87.dj }
 - { name: 88.dry-cleaner-1, pname: 88.dry-cleaner-1 }
 - { name: 88.dry-cleaner-2, pname: 88.dry-cleaner-2 }
