--- a/config/widget_icons.yml
+++ b/config/widget_icons.yml
@@ -273,8 +273,8 @@
 - { name: 26.ngo, pname: 26.ngo }
 - { name: 262.fish, pname: 262.fish }
 - { name: 27.organizational-chart, pname: 27.organizational-chart }
-- { name: 273.child male, pname: 273.child male }
-- { name: 274.child female, pname: 274.child female }
+- { name: 273.child-male, pname: 273.child male }
+- { name: 274.child-female, pname: 274.child female }
 - { name: 275.children, pname: 275.children }
 - { name: 276.teen-male, pname: 276.teen male }
 - { name: 277.teen-female, pname: 277.teen female }
