New widget icons

--- a/config/widget_icons.yml
+++ b/config/widget_icons.yml
@@ -414,3 +414,44 @@
 - { name: 97.lawn-care, pname: 97.lawn-care }
 - { name: 98.lighting-store, pname: 98.lighting-store }
 - { name: 99.lingerie-shop, pname: 99.lingerie-shop }
+- { name: 121.shoe-store-2, pname: 121.shoe-store-2 }
+- { name: 235.home-healthcare, pname: 235.home-healthcare }
+- { name: 237.hospital-clinic, pname: 237.hospital-clinic }
+- { name: 238.nursing-home, pname: 238.nursing-home }
+- { name: 240.pediatrician, pname: 240.pediatrician }
+- { name: 241.pharmacy, pname: 241.pharmacy }
+- { name: 242.urgent-care, pname: 242.urgent-care }
+- { name: 243.womens-health, pname: 243.womens-health }
+- { name: 244.acupuncture, pname: 244.acupuncture }
+- { name: 245.showtimes, pname: 245.showtimes }
+- { name: 246.exhibit, pname: 246.exhibit }
+- { name: 247.concerts, pname: 247.concerts }
+- { name: 248.dance-club, pname: 248.dance-club }
+- { name: 249.entertainment-schedule, pname: 249.entertainment-schedule }
+- { name: 250.movies, pname: 250.movies }
+- { name: 252.orchestra, pname: 252.orchestra }
+- { name: 253.shows-live-music, pname: 253.shows-live-music }
+- { name: 254.theaters, pname: 254.theaters }
+- { name: 255.upcoming-events, pname: 255.upcoming-events }
+- { name: 256.festivals, pname: 256.festivals }
+- { name: 261.dogs, pname: 261.dogs }
+- { name: 263.general-exams, pname: 263.general-exams }
+- { name: 267.pet-food, pname: 267.pet-food }
+- { name: 284.democrat, pname: 284.democrat }
+- { name: 285.green, pname: 285.green }
+- { name: 286.independent, pname: 286.independent }
+- { name: 287.libertarian, pname: 287.libertarian }
+- { name: 288.republican, pname: 288.republican }
+- { name: 296.nutritional-information, pname: 296.nutritional-information }
+- { name: 300.sandwich-shop, pname: 300.sandwich-shop }
+- { name: 301.shaved-ice, pname: 301.shaved-ice }
+- { name: 304.soup, pname: 304.soup }
+- { name: 305.smoothie, pname: 305.smoothie }
+- { name: 306.menu-new-items, pname: 306.menu-new-items }
+- { name: 307.menu-seasonal, pname: 307.menu-seasonal }
+- { name: 308.beauty-products, pname: 308.beauty-products }
+- { name: 309.beauty-treatments, pname: 309.beauty-treatments }
+- { name: 311.laser-hair-removal, pname: 311.laser-hair-removal }
+- { name: 312.makeover, pname: 312.makeover }
+- { name: 313.manicure, pname: 313.manicure }
+- { name: 314.massage, pname: 314.massage }
